<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:background="#E1F5FE"
                tools:context=".MainActivity">


    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
    <Button
        android:id="@+id/spotifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_marginBottom="5dp"
        android:text="@string/spotify"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/score"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/libraryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/library"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/biggerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/bigger"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/readerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/reader"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/capstoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:background="#B71C1C"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/capstone"
        android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>
